
syntax = "proto3";

option go_package = "google.golang.org/grpc/Btech_Project/route_guide/location";
option java_multiple_files = true;
option java_package = "io.btech.project.location";
option java_outer_classname = "LocationProto";

package location;


service location {
// A simple RPC.
//
// Obtains the feature at a given position.
//
// A feature with an empty name is returned if there's no feature at the given
// position.
    rpc GetFeature(Point) returns (Feature) {}

    }


message Point {
  int32 latitude = 1;
  int32 longitude = 2;
}

message Feature {
  string name = 1;
  Point location = 2;
  string area = 3;
}
